[package]
name = "temporis"
description = "Parse natural date strings into valid dates"
authors = ["Paul Chambaz <paul.chambaz@tutanota.com>"]
homepage = "https://github.com/paulchambaz/temporis"
version = "1.0.1"
edition = "2021"
include = ["src/**/*", "README.md"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/temporis"
keywords = []

[lib]
name = "temporis"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
lazy_static = "1.5.0"
regex = "1.11.1"
